<resources>
    <string name="app_name">TagDaily</string>

    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_search">Search tags</string>
    <string name="action_add">Add</string>
    <string name="action_transparent">show transparent</string>
    <string name="title_activity_transparent_theme">TransparentTheme</string>
    <string name="title_activity_remind_dialog">RemindDialog</string>
    <string name="action_dialog">show dialog</string>
    <string name="title_activity_with_fragment">WithFragment</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="action_fragment">show fragment</string>
    <string name="empty_list_msg">%1$s: no files for the time being, add by press add on the menu</string>
    <string name="title_activity_filer_chooser">FilerChooser</string>
    <string name="chooser_title">open with</string>
    <string name="imageStr">image</string>
    <string name="file_delete">delete</string>
    <string name="file_detail">detail</string>
    <string name="file_deleted">deleted</string>
    <string name="file_detail_show">detail</string>
    <string name="file_recover">recover</string>
    <string name="file_recovered">recovered</string>
    <string name="encryptSucc">add file succeed</string>
    <string name="encryptFail">add file failed: can\'t encrypt file</string>
    <string name="noPassword">no password</string>
    <string name="file_confirm">Confirm</string>
    <string name="file_recover_prompt">Are you sure to recover this file?</string>
    <string name="file_delete_prompt">Are you sure to delete this encrypted file?(you will lose your original file)</string>
    <string name="file_name">File name</string>
    <string name="file_size">File size</string>
    <string name="file_time">File added at</string>
    <string name="file_info">File Info</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
</resources>
