<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="3dp"
    android:layout_height="match_parent"
    tools:context=".view.fileChooser.InfoDialog">

    <TableRow>

        <TextView
            android:id="@+id/file_name"
            android:layout_weight="3"
            android:padding="3dip"
            android:text="@string/file_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/file_name_content"
            android:layout_weight="7"
            android:gravity="start"
            android:padding="3dip"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/file_size"
            android:layout_weight="3"
            android:padding="3dip"
            android:text="@string/file_size"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/file_size_content"
            android:layout_weight="7"
            android:gravity="start"
            android:padding="3dip"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/file_time"
            android:layout_weight="3"
            android:padding="3dip"
            android:text="@string/file_time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/file_time_content"
            android:layout_weight="7"
            android:gravity="start"
            android:padding="3dip"
            android:textSize="20sp" />
    </TableRow>

</TableLayout>
